--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "swal": "^0.1.0",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.18.5",
+    "@types/sweetalert": "^2.0.4",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
